--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">                       
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="James Lee" />
             <div class="profile-content pull-left">
-                <h1 class="name">Lucas Farah</h1>
+                <h1 class="name">.....Lucas Farah....</h1>
                 <h2 class="desc">iOS Developer</h2>   
                 <ul class="social list-inline">
                     <li><a href="https://github.com/lfarah" target="_blank"><i class="fa fa-github-alt"></i></a></li>                   
