--- a/br/index.html
+++ b/br/index.html
@@ -326,7 +326,7 @@
                         <h2 class="heading sr-only">Informações básicas</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Localização:</span>San Francisco, CA</li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Localização:</span>São Paulo, SP</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:hi@lucasfarah.me">hi@lucasfarah.me</a></li>
                             </ul>
                         </div><!--//content-->  
