Fixed English mistakes:

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <div class="section-inner">
                         <h2 class="heading">About me</h2>
                         <div class="content">
-                            <p>Lucas is a 20 year-old iOS developer from Brazil. He is currently doing freelancing, woking for companies of all sizes. </p>
-                            </p>Lucas actively contributes to several open source projects and attends hackathons, on which he won prizes from companies like IBM, NFL, ESPN, MasterCard and much more.</p>    
+                            <p>Lucas is a 20 year-old iOS developer from Brazil. He is currently doing freelancing, working for companies of all sizes. </p>
+                            </p>Lucas actively contributes to several open source projects and attends hackathons, on which he won prizes from companies like IBM, NFL, ESPN, MasterCard and many more.</p>    
                                   
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
