--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     
                <section class="latest section">
                     <div class="section-inner">
-                        <h2 class="heading">Open Source</h2>
+                        <h2 class="heading">TESTTTTTTOpen Source</h2>
                         <div class="content">    
                             <div class="item featured text-center">
                                 <h3 class="title"><a>Awesome iOS</a></h3>
